stylesheets/index-responsive.css
@media(max-width: 1163px){
  .pad30 {
    padding: 13% 14%;
  }
}
@media(max-width:1095px){
  .pad30 {
    padding: 13% 10%;
  }
}
@media(max-width: 973px){
  .pad30 {
    padding: 30px 15px;
  }
  .home-page_block6-text {
    font-size: 18px;
  }
}
@media(max-width: 959px){
  .home-page_block5 {
      padding: 50px 0 50px;
  }
  .home-page_block5 .carousel-indicators {
      bottom: -40px;
  }
}
@media(max-width: 800px){
  .pad30 {
    padding: 30px 0;
  }
}
@media only screen and (min-device-width: 320px) and (max-device-width: 767px) {
  .container {
    width: 100% !important;
    padding: 0px !important;
    margin: 0 !important;
  }
  #myCarousel .carousel-indicators {
      bottom: 15px;
  }
  .carousel .item {
    height: 350px;
  }
  .carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a {
    width: 100% !important;
    position: relative;
    margin: 10 auto;
    top: 0px;
    height: 300px !important;
    margin: -10px 0;
    z-index: -1000px;
  }
  .carousel-caption {
    padding-top: 0 !important;
  }
  .carousel-caption>p, .carousel-caption>a {
    font-family: "Proxima";
    font-size: 14px;
  }
  #homepagebutton {
    width: auto;
    font-size: 12px;
    padding: 10px 40px !important;
  }
  .home-page_block5-header-text {
    font-size: 170%;
  }
  .carousel.slide.homepage-responsive {
    display: block;
  }
  .home-page_block5-text {
    width: 90%;
    height: 100px;
    text-align: center;
  }
  button {
    width: 90%;
    margin: 20px;
    font-size: 12px;
  }
  .hamburger--squeeze {
    width:auto;
  }
  h1 {
    font-size: 20px !important;
  }
  .btn:hover {
    color: white;
    text-decoration: underline;
  }
  .home-page_block1 {
    background-color: #20202b;
    padding: 10px;
    font-size: 16px;
    line-height: 1.42857143;
    font-family: "Proxima";
    color: white;
  }
  .carousel1 img {
    height: 300px !important;
  }
  .carousel.slide.homepage.second-carousel img {
    height: 100px !important;
  }
  .carousel-caption>h3 {
    font-family: "Stag";
    font-size: 22px;
  }
  .carousel-caption>p, .carousel-caption>a {
    font-family: "Proxima";
    font-size: 12px;
  }
  img.home-page_block2-image {
    width: 250px;
  }
  h2 {
    font-size: 20px !important;
  }
  .home-page_block2 p {
    font-size: 16px;
  }
  .home-page_block4 {
    margin-bottom: 50px;
    height: 300px;
  }
  .block4-meta {
    padding: 0 15px;
  }
  p.home-page_block4-text {
    font-family: "Proxima";
    font-size: 12px;
    color: white;
    border-bottom: 7px solid #f2ba19;
    width: 50%;
    padding-bottom: 2px;
    margin-bottom: 2px;
  }
  h2.home-page_block4-text {
    font-size: 16px !important;
  }
  img.home-page_block5-image {
    width: 100px !important;
    height: 70px;
    margin-top: 50px;
  }
  div.home-page_block4-video {
    position: fixed;
    width: 100%;
    height: 100%;
    z-index: 1;
    display: none;
  }
  .wistia_responsive_padding {
    padding: 56.25% 0 28px 0;
    position: relative;
  }
  .wistia_responsive_wrapper {
    height: 100%;
    position: absolute;
    width: 100%;
  }
  .wistia_embed.wistia_async_vpld4j6fjs {
    display: inline-block;
    height: 100%;
    width: 100%;
  }
  img#myplay1 {
    width: 50px;
  }
  .home-page_block5 {
    margin: 50px auto;
  }
  .row.block5 {
    height: 200px !important;
  }
  .home-page_block5-header {
    font-family: "Stag";
  }
  .home-page_block5-text {
    font-family: "Proxima";
    font-size: 14px;
  }
  h3.home-page_block5-header {
    font-size: 16px;
  }
  .home-page_block6-text {
    margin: 10px;
    padding: 10px;
  }
  .home-page_block6-text {
    font-size: 14px;
  }
  .home-page_block6-triangle {
    position: absolute;
    right: 50px;
    top: 180px;
    transform: rotate(90deg);
    width: 30px;
    z-index: 1000;
  }
  #block6image {
    width: 100%;
  }
  .home-page_block6-text3 {
    padding: 0 !important;
  }
  .home-page_block7-header {
    margin: 15px !important;
  }
  .home-page_block7 {
    margin: 20px;
  }
  .carousel-inner.homepage {
    display: block;
  }
  .pad30 {
    padding: 40px 15px;
  .LG-logo {
    position: relative;
    top: 5px;
    left: 15px;
    margin: 0;
    width: auto !important;
  }
  }
  #block6-right {
    padding-left: 0;
  }
  .navbar .container-fluid {
    padding-left: 15px;
    padding-right: 15px;
  }
  .carousel-caption{
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
  }
  #myCarousel #myCarousel1 {
    display: none;
  }
  .home-page_block2>h1 {
    margin: 20px 10px;
  }
  .navbar-collapse {
    max-height: none !important;
  }
  .home-page_block5 {
    display: none;
  }
  #myCarousel3 {
    padding-bottom: 50px;
  }
  #myCarousel3 .carousel-indicators {
    display: block;
  }
  #myCarousel3 .carousel-indicators li,#myCarousel3 .carousel-indicators .active {
    width: 15px;
    height: 15px;
    margin: 1px 5px;
  }
  #myCarousel3 .carousel-control {
    display: none;
  }
  .mobile-triangle {
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 30px 37.5px 0 37.5px;
    border-color: #20202b transparent transparent transparent;
    position: absolute;
    left: 100px;
  }
  .mb50-desktop {
    margin-bottom:0;
  }
}

